<resources>
    <string name="app_name">TicketMovie</string>
    <string name="loading">Đang tải</string>
    <string name="str_disconnect_try_again">Mất mạng, vui lòng kiểm tra lại!</string>
    <string name="str_token_expried">Phiên đăng nhập hết hạn</string>
    <string name="str_server_busy">Server bận</string>
    <string name="str_no_internet_connect">Không có kết nối mạng</string>
    <string name="cultureplex">Cultureplex</string>
    <string name="dat_ve_theo_phim">Đặt vé theo phim</string>
    <string name="dat_ve_theo_rap">Đặt bé theo rạp</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="rap_cgv">Rạp CGV</string>
    <string name="rap_dac_biet">Rạp đặc biệt</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="dang_chieu">Đang chiếu</string>
    <string name="dac_biet">Đặc biệt</string>
    <string name="sap_chieu">Sắp chiếu</string>
    <string name="dat_ve">Đặt vé</string>
    <string name="tin_nong">Tin nóng</string>
    <string name="tat_ca">TẤT CẢ</string>
    <string name="login">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="register_facebook">Đăng ký bằng tài khoản <b>Facebook</b></string>
    <string name="foreget_password">Quên mật khẩu?</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="tai_khoan_toi">TÀI KHOẢN TÔI...</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="info_other">THÔNG TIN THÊM</string>
    <string name="name">Tên</string>
    <string name="birthday">Ngày sinh</string>
    <string name="last_name">Họ</string>
    <string name="address">Địa chỉ</string>
    <string name="dieu_khoan_su_dung"><u>Điều khoản sử dụng</u></string>
    <string name="chinh_sach"><u>Chính sách bảo mật</u></string>
    <string name="kiem_duyet">Kiểm duyệt</string>
    <string name="khoi_chieu">Khởi chiếu</string>
    <string name="the_loai">Thể loại</string>
    <string name="duration">Thời lượng</string>
    <string name="actor">Diễn viên</string>
    <string name="director">Đạo diễn</string>
    <string name="movie">Phim</string>
    <string name="ap_youtube">AIzaSyAjEBUNQs03Zhy9dA-JpAL22E0MlRecnyw</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="infomation_account">Thông tin tài khoản</string>
    <string name="history_transaction">Lịch sử giao dịch</string>
    <string name="member">Thành viên CGV</string>
    <string name="email_hint">Email đăng nhập</string>
    <string name="password_login">Mật khẩu đăng nhập</string>
    <string name="pay">Thanh toán</string>
    <string name="tong_so_ve">Tổng số vé</string>
</resources>
