<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    tools:context=".presentation.ui.activities.LoginActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:orientation="vertical">

        <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@color/color_white"
            android:hint="Email hoặc tên đăng nhập"
            android:paddingVertical="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/text_size_18sp" />

        <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:hint="Mật khẩu"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            android:maxLines="1"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/text_size_18sp" />
    </LinearLayout>
    <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:text="@string/login"
        android:textColor="@color/color_white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18sp"
        android:background="@drawable/background_button_booking"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_30">
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/color_text_hint"
            android:layout_weight="1"/>
        <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/text_size_16sp"
            android:textAllCaps="true"
            android:layout_marginHorizontal="@dimen/dp_20"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/color_text_hint"
            android:layout_weight="1"/>
    </LinearLayout>

    <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/backgound_register_facebook"
        android:text="@string/register_facebook"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/icon_facebook"
        android:paddingLeft="@dimen/dp_20"
        android:textAlignment="textStart"
        android:drawablePadding="@dimen/dp_20"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_16sp"
        android:gravity="center|start" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1">
            <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_account"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1">
            <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
                android:id="@+id/forr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foreget_password"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_16sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>