<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.ChangePasswordActivity">
    <include layout="@layout/layout_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_16sp"
                    android:paddingLeft="@dimen/dp_5"
                    android:textStyle="bold"
                    android:textColor="@color/color_text_title_register"
                    android:text="@string/password_login"/>
                <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomEditText
                    android:id="@+id/edit_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:inputType="textPassword"
                    android:background="@color/color_white"
                    android:hint="Mật khẩu hiện tại"
                    android:paddingVertical="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_10"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp_10"
                    android:textSize="@dimen/text_size_16sp" />
                <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomEditText
                    android:id="@+id/edit_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:inputType="textPassword"
                    android:background="@color/color_white"
                    android:hint="Mật khẩu mới"
                    android:paddingVertical="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_10"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp_10"
                    android:textSize="@dimen/text_size_16sp" />
                <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomEditText
                    android:id="@+id/edit_re_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:inputType="textPassword"
                    android:background="@color/color_white"
                    android:hint="@string/re_password"
                    android:paddingVertical="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_10"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp_10"
                    android:textSize="@dimen/text_size_16sp" />
            </LinearLayout>
            <vn.anhnguyen.ticketmovie.presentation.ui.custom.CustomButton
                android:id="@+id/button_change_password"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_16sp"
                android:background="@drawable/background_button_booking"
                android:textColor="@color/color_white"
                android:text="@string/change_password"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>